// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsable/> Renders open by default 1`] = `
<Collapsable
  isOpen={true}
  maxAnimationDuration={1}
  minAnimationDuration={0.3}
  speedDivider={1000}
>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
        "transition": "height 0.3s",
      }
    }
  >
    <div>
      <h1>
        My Title
      </h1>
    </div>
  </div>
</Collapsable>
`;

exports[`<Collapsable/> Renders without crashing 1`] = `
<Collapsable
  isOpen={false}
  maxAnimationDuration={1}
  minAnimationDuration={0.3}
  speedDivider={1000}
>
  <div
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
        "transition": "height 0s",
      }
    }
  >
    <div>
      <h1>
        My Title
      </h1>
    </div>
  </div>
</Collapsable>
`;
